# cmt_dashboard

./: .gitignore  README.MD  cmt.ini  cmt_website.wsgi  development.ini  package-lock.json  pyproject.toml  tox.ini
src/cmt_website/: __init__.py  pysqm_reader.py  routes.py
src/cmt_website/alembic/: env.py
src/cmt_website/alembic/versions/: 47fc847fce7d_init.py  7fc51d825069_split.py  ccdb589f8b8f_init.py
src/cmt_website/data/: __init__.py  interfaces.py  poller.py  time.py
src/cmt_website/data/database/: models.py  reader.py  writer.py
src/cmt_website/data/sqm/: pysqm_reader.py
src/cmt_website/data/weather/: __init__.py  data.py  factory.py  wx_reader.py
src/cmt_website/plotting/: __init__.py  bokeh_plotter.py  factory.py  plot_interface.py
src/cmt_website/sqm/: __init__.py  pysqm_reader.py
src/cmt_website/static/css/: default.css  variables.css
src/cmt_website/status/: __init__.py  dome.py  error.py  factory.py  reader_interface.py  talon_shm.py  telescope.py  units.py
src/cmt_website/status/talon/: shm.py  telstatshm.py
src/cmt_website/templates/: RAO_Weather_Data.html  SQM.html  base.mako  cmt.html  cmt.mako  current_image.mako  features.mako  head.mako  index.html  menu.html  navigation.mako  scripts.mako  sqm.mako  top.html  weather.mako  widget_base.mako  widget_card.mako
src/cmt_website/views/: cmt.py  default.py  time.py
src/cmt_website/weather/: data.py  factory.py  feature.py  reader_interface.py  wx_reader.py
tests/: test_cmt_website.py
tests/data/: test_poller.py  test_pysqm_reader.py  test_time.py
tests/data/database/: test_reader.py  test_writer.py
