[tool.poetry]
name = "cmt_website"
version = "0.1.0"
description = "Information website for the Clarke-Milone Telescope"
authors = ["Harlan Shaw <harlan.shaw@ucalgary.ca>"]

[tool.poetry.dependencies]
python = "3.9.*"
pyramid = "^2.0"
Mako = "^1.1.6"
pyramid-mako = "^1.1.0"
numpy = "^1.21.5"
attr = "^0.3.1"
pandas = "^1.3.5"
argh = "^0.26.2"
PyYAML = "^6.0"
attrs = "^21.2.0"
sysv-ipc = "^1.1.0"
bokeh = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.24.4"
waitress = "^2.0.0"
hypothesis = "^6.31.6"
pyramid-debugtoolbar = "^4.9"
instrumental = "^0.5.3"
black = "^21.12b0"
watchdog = "^2.1.6"
alembic = "^1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
